--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.1",
     "react-uuid": "^1.0.2",
     "reactstrap": "^8.4.1"
